--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tidyjs/tidy": "^2.3.1",
     "@tippyjs/react": "^4.2.5",
     "@visx/axis": "^1.10.0",
     "@visx/glyph": "^1.7.0",
